# which-terminal

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: detect.rs  detector.rs  exec.rs  lib.rs  main.rs  types.rs  utils.rs
src/platform/: android.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/version/: env.rs  exec.rs  mod.rs
