[package]
name = "which-terminal"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform terminal detection library for Rust"
repository = "https://github.com/ahaoboy/which-terminal"
homepage = "https://github.com/ahaoboy/which-terminal"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]
keywords = ["terminal", "detection", "cross-platform", "tty"]
categories = ["command-line-interface", "os"]


[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
